--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="js/alumnos.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
